# whiel-telegram-bot

./: .gitignore  README.md  stack.yaml  whiel-telegram-bot.cabal
cfg/: config.json
src/: Main.hs
src/WTB/: Config.hs  Telegram.hs
