name:                whiel-telegram-bot
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/whiel-telegram-bot#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable whiel-telegram-bot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:
                WTB.Config
  build-depends:
                base >= 4.7 && < 5,
                aeson,
                telegram-api,
                http-client,
                http-client-tls,
                bytestring,
                text                